--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 black==24.4.2
 django==4.2
 ipython==8.12.3
-pillow==10.4.0
-psycopg2-binary==2.9.9
+Pillow==10.4.0
+psycopg2==2.9.9
 redis==5.0.8
 python-dotenv==1.0.1
 djangorestframework==3.15.2
